--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
             <div class="row">
                <div class="col-xl-6 mx-auto text-center">
                   <div class="section-title mb-100">
-                     <p class="text-danger">get in touch</p>
+                     <p class="text-light">get in touch</p>
                      <h4 class="text-light">contact me</h4>
                   </div>
                </div>
@@ -86,25 +86,25 @@
                            </div>
                            <div class="col-xl-12">
                               <textarea placeholder="message" cols="30" rows="10"></textarea>
-                              <input type="submit" value="send message">
+                              <input class="bg-light text-dark" type="submit" value="send message">
                            </div>
                         </div>
                      </form>
                   </div>
                   <div class="col-md-4">
                      <div class="single-contact">
-                        <i class="fa fa-map-marker"></i>
-                        <h5 class="text-danger">Address</h5>
+                        <i class="fa fa-map-marker bg-light"></i>
+                        <h5 class="text-light">Address</h5>
                         <p>661 Lefferts, NY 11203, USA</p>
                      </div>
                      <div class="single-contact">
-                        <i class="fa fa-phone"></i>
-                        <h5 class="text-danger">Phone</h5>
+                        <i class="fa fa-phone bg-light"></i>
+                        <h5 class="text-light">Phone</h5>
                         <p>(+1) 517 397 7100</p>
                      </div>
                      <div class="single-contact">
-                        <i class="fa fa-envelope"></i>
-                        <h5 class="text-danger">Email</h5>
+                        <i class="fa fa-envelope bg-light"></i>
+                        <h5 class="text-light">Email</h5>
                         <p>infor@personal.com</p>
                      </div>
                   </div>
@@ -113,11 +113,11 @@
       </section>
 
           <!-- Footer -->
-  <footer class="bg-white">
+  <footer class="bg-dark">
     <div class="container py-5">
       <div class="row py-4">
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
-          <p class="font-italic text-muted text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+          <p class="font-italic text-muted text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
           <ul class="list-inline mt-4">
             <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i class="fab fa-twitter"></i></a></li>
             <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i class="fab fa-facebook"></i></a></li>
@@ -127,26 +127,26 @@
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4 text-dark">Shop</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Shop</h6>
           <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" class="text-muted text-dark">For Women</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-dark">For Men</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-dark">Stores</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-dark">Our Blog</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-white">For Women</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-white">For Men</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-white">Stores</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-white">Our Blog</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4 text-dark">Company</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Company</h6>
           <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" class="text-muted text-dark">Login</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-dark">Register</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-dark">Wishlist</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-dark">Our Products</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-white">Login</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-white">Register</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-white">Wishlist</a></li>
+            <li class="mb-2"><a href="#" class="text-muted text-white">Our Products</a></li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-6 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4 text-dark">Newsletter</h6>
-          <p class="text-muted mb-4 text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>
+          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Newsletter</h6>
+          <p class="text-muted mb-4 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>
           <div class="p-1 rounded border">
             <div class="input-group">
               <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">
@@ -160,9 +160,9 @@
     </div>
 
     <!-- Copyrights -->
-    <div class="bg-light py-4">
+    <div class="bg-dark py-4">
       <div class="container text-center">
-        <p class="text-muted mb-0 py-2 blue-text">© 2019 Bootstrapious All rights reserved.</p>
+        <p class="text-muted mb-0 py-2 text-white">© 2020 Liam Gosnell.</p>
       </div>
     </div>
   </footer>
