--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 	<link rel="stylesheet" href="./js/main.js">
 
+    <script src="three.min.js"></script>
+
 <body data-spy="scroll" data-target="#navbarSupportedContent">
 
 
@@ -53,6 +55,7 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
+        
 
       </ul>
     </div>
@@ -143,10 +146,10 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="./images/focus-white.jpeg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="./images/h-i30n.jpeg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Ford Focus RS</a>
+            <a href="#">Hyundai i30N</a>
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
         </div>
@@ -154,10 +157,10 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="./images/golr-r.jpeg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="./images/gti7.jpeg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Volkswagen Golf R</a>
+            <a href="#">Golf Gti</a>
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
@@ -264,7 +267,7 @@
 	
 	<!-- ./Footer -->
 
-
+                
 				<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
