--- a/reviews.html
+++ b/reviews.html
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="./images/m4.jpeg" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="./images/h-i30n.jpeg" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -105,7 +105,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="./images/gti7.jpeg" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -123,7 +123,7 @@
 
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="./images/supra.jpeg" alt="">
           </a>
         </div>
         <div class="col-md-5">
