--- a/index.html
+++ b/index.html
@@ -23,56 +23,34 @@
 
 	<link rel="stylesheet" href="./js/main.js">
 
-    <script src="three.min.js"></script>
+<body>
 
-<body data-spy="scroll" data-target="#navbarSupportedContent">
-
-
-
-	<!--Nav-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent shadow fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">DailyDriverss</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="reviews.html">Reviews</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="media.html">Media</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-        
-
-      </ul>
-    </div>
-  </div>
-</nav>
 
 <!-- Full Page Image Header with Vertically Centered Content -->
-<header class="masthead">
-  <div class="container h-100">
-    <div class="row h-100 align-items-center">
-      <div class="col-12 text-center">
-        <h1 class="font-weight-light text-light">All About the Drive.</h1>
-        
-      </div>
+<header>
+    <div class="logo float-left">
+     <a href="">DailyDriverss</a>
     </div>
-  </div>
+    <div class="nav-icon float-right">
+    <span> </span>
+    <span> </span>
+    <span> </span>
+    </div>
+  
 </header>
+
+
+<div class="full-menu">
+   <div class="full-menu-content">
+     <ul class="page-menu">
+       <li><a href="" class="active">Home</a></li>
+       <li><a href="">About</a></li>
+       <li><a href="">Reviews</a></li>
+       <li><a href="">Media</a></li>
+       <li><a href="">Contact</a></li>
+     </ul>
+   </div>
+</div>
 
 
 	
@@ -271,6 +249,7 @@
 				<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+                <link rel="stylesheet" href="./js/main.js">
 
 </body>
 
