adding scroll spy to the nav

--- a/media.html
+++ b/media.html
@@ -152,21 +152,21 @@
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Shop</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Reviews</h6>
           <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" class="text-muted text-white">For Women</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">For Men</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Stores</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Our Blog</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/bmw/m4?source=navbarSearch" class="text-muted text-white">BMW M4</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/audi/rs3?source=navbarSearch" class="text-muted text-white">Audi RS3</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/volkswagen/golf-gti?source=navbarSearch" class="text-muted text-white">Golf Gti</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/hyundai/i30-n?source=navbarSearch" class="text-muted text-white">Hyundai i30N</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Company</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Other Resources</h6>
           <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" class="text-muted text-white">Login</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Register</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Wishlist</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Our Products</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/car-reviews" class="text-muted text-white">Car Wow</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.parkers.co.uk/car-reviews/" class="text-muted text-white">Parkers</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carzone.ie/reviews/" class="text-muted text-white">Carzone</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.topgear.com/" class="text-muted text-white">TopGear</a></li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-6 mb-lg-0">
@@ -196,13 +196,6 @@
 
 	
 	<!-- ./Footer -->
-
-
-	
-
-
-
-
 
 
 				<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
