--- a/reviews.html
+++ b/reviews.html
@@ -77,7 +77,7 @@
         <div class="col-md-5">
           <h3>Project One</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-          <a class="btn btn-secondary" href="#">Read More</a>
+          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/bmw/m4?source=navbarSearch">Read More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -94,7 +94,7 @@
         <div class="col-md-5">
           <h3>Project Two</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-          <a class="btn btn-secondary" href="#">Read More</a>
+          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/hyundai/i30-n?source=navbarSearch">Read More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -111,7 +111,7 @@
         <div class="col-md-5">
           <h3>Project Three</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-          <a class="btn btn-secondary" href="#">Read More</a>
+          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/volkswagen/golf-gti?source=navbarSearch">Read More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -129,7 +129,7 @@
         <div class="col-md-5">
           <h3>Project Four</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-secondary" href="#">Read More</a>
+          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/toyota/supra?source=navbarSearch">Read More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -146,7 +146,7 @@
         <div class="col-md-5">
           <h3>Project Four</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-secondary" href="#">Read More</a>
+          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/tesla/model-3?source=navbarSearch">Read More</a>
         </div>
       </div>
 
@@ -163,7 +163,7 @@
         <div class="col-md-5">
           <h3>Project Four</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-secondary" href="#">Read More</a>
+          <a target="_blank" class="btn btn-secondary" href="https://www.topgear.com/car-news/top-gear-heroes/top-gears-bargain-heroes-mk5-vw-golf-gti">Read More</a>
         </div>
       </div>
 
@@ -180,7 +180,7 @@
         <div class="col-md-5">
           <h3>Project Four</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-secondary" href="#">Read More</a>
+          <a target="_blank" class="btn btn-secondary" href="https://www.topgear.com/car-reviews/ford/fiesta-st">Read More</a>
         </div>
       </div>
 
@@ -197,7 +197,7 @@
         <div class="col-md-5">
           <h3>Project Four</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-secondary" href="#">Read More</a>
+          <a target="_blank" class="btn btn-secondary" href="https://www.whatcar.com/audi/rs3/hatchback/review/n175">Read More</a>
         </div>
       </div>
       
@@ -206,7 +206,7 @@
     </section>
     <!-- /.container -->
 
-         <!-- Footer -->
+        <!-- Footer -->
   <footer class="bg-dark">
     <div class="container py-5">
       <div class="row py-4">
@@ -221,21 +221,21 @@
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Shop</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Reviews</h6>
           <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" class="text-muted text-white">For Women</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">For Men</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Stores</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Our Blog</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/bmw/m4?source=navbarSearch" class="text-muted text-white">BMW M4</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/audi/rs3?source=navbarSearch" class="text-muted text-white">Audi RS3</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/volkswagen/golf-gti?source=navbarSearch" class="text-muted text-white">Golf Gti</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/hyundai/i30-n?source=navbarSearch" class="text-muted text-white">Hyundai i30N</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Company</h6>
+          <h6 class="text-uppercase font-weight-bold mb-4 text-white">Other Resources</h6>
           <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" class="text-muted text-white">Login</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Register</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Wishlist</a></li>
-            <li class="mb-2"><a href="#" class="text-muted text-white">Our Products</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carwow.co.uk/car-reviews" class="text-muted text-white">Car Wow</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.parkers.co.uk/car-reviews/" class="text-muted text-white">Parkers</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.carzone.ie/reviews/" class="text-muted text-white">Carzone</a></li>
+            <li class="mb-2"><a target="_blank" href="https://www.topgear.com/" class="text-muted text-white">TopGear</a></li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-6 mb-lg-0">
